--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -11,5 +11,21 @@ users.active=Active
 users.registered=Registered
 
 meals.title=Meals list
+meals.add=Add meal
+meals.calories=Calories
+meals.description=Description
+meals.filter=Filter
+meals.edit=Edit meal
+meals.delete=Delete meal
+meals.startDate=From date
+meals.endDate=To date
+meals.startTime=From time
+meals.endTime=To time
+meals.dateTime=Date time
 
+
+common.cancel=Cancel
+common.save=Save
+common.delete=Delete
+common.update=Update
 common.select=Select
